[gd_scene load_steps=17 format=3 uid="uid://15lvoapd3ndd"]

[ext_resource type="Script" path="res://scripts/boat.gd" id="1_xkc0s"]
[ext_resource type="Texture2D" uid="uid://drtjl2baagntk" path="res://assets/images/icon.svg" id="2_du806"]
[ext_resource type="Texture2D" uid="uid://y1e1t670dde7" path="res://assets/images/backgrounds/Ocean_6/1.png" id="4_gkkfs"]
[ext_resource type="PackedScene" uid="uid://ck5ejh4qfohlp" path="res://scenes/bottle/bottle_new_world.tscn" id="5_1ddor"]
[ext_resource type="Texture2D" uid="uid://d4a0v5tcs6ns3" path="res://assets/images/backgrounds/Night/Clouds.png" id="5_1w37v"]
[ext_resource type="Script" path="res://scenes/parallax_background_2.gd" id="5_3m36v"]
[ext_resource type="Texture2D" uid="uid://cf7qfpefrq050" path="res://assets/images/backgrounds/Ocean_6/2.png" id="5_g4bcx"]
[ext_resource type="Script" path="res://scenes/canvas_layer.gd" id="6_pe684"]
[ext_resource type="Texture2D" uid="uid://db34t4h6eje6w" path="res://assets/images/backgrounds/Ocean_8/4.png" id="8_dwijc"]
[ext_resource type="FontFile" uid="uid://c6s1nrll223qc" path="res://assets/fonts/MinimalPixelFont.ttf" id="9_1v2s0"]
[ext_resource type="Script" path="res://scripts/clock_hud.gd" id="9_25523"]
[ext_resource type="Texture2D" uid="uid://bagvfcccvqu8a" path="res://assets/images/backgrounds/pixil-frame-0.png" id="10_xi2lw"]
[ext_resource type="Texture2D" uid="uid://bj5nanfyhfehw" path="res://assets/images/backgrounds/pixil-frame-1.png" id="11_4ms74"]
[ext_resource type="Texture2D" uid="uid://v3j3dffltr1" path="res://assets/images/backgrounds/pixil-frame-2.png" id="12_aay4e"]

[sub_resource type="SpriteFrames" id="SpriteFrames_a2fva"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_xi2lw")
}, {
"duration": 1.0,
"texture": ExtResource("11_4ms74")
}, {
"duration": 1.0,
"texture": ExtResource("12_aay4e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_raihm"]
size = Vector2(233.726, 231.91)

[node name="Node2D" type="Node2D"]

[node name="front waves" type="ParallaxBackground" parent="."]
layer = 1
script = ExtResource("5_3m36v")

[node name="waves4" type="ParallaxLayer" parent="front waves"]
light_mask = 8
visibility_layer = 8
position = Vector2(-792, 304)
motion_scale = Vector2(0.84, 0.84)
motion_mirroring = Vector2(1080, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(104.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.605868
speed_scale = 0.5

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(440.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(552.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(664.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(776.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(888.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(1000.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(1112.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(1224.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(1232.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(216.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.184302
speed_scale = 0.5

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="front waves/waves4"]
position = Vector2(328.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.10951
speed_scale = 0.5

[node name="waves2" type="ParallaxLayer" parent="front waves"]
position = Vector2(-792, 280)
motion_scale = Vector2(0.87, 0.87)
motion_mirroring = Vector2(1080, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(113.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.0276585
speed_scale = 0.5

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(449.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(561.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(673.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(785.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(897.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(1009.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(1121.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(1233.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(1241.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(225.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.606103
speed_scale = 0.5

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="front waves/waves2"]
position = Vector2(337.12, -11)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.10951
speed_scale = 0.5

[node name="waves3" type="ParallaxLayer" parent="front waves"]
position = Vector2(-768, 328)
motion_scale = Vector2(0.91, 0.91)
motion_mirroring = Vector2(1080, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(104.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.605868
speed_scale = 0.5

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(440.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(552.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(664.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(776.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(888.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(1000.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(1112.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(1224.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(1232.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(216.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.184302
speed_scale = 0.5

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="front waves/waves3"]
position = Vector2(328.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.10951
speed_scale = 0.5

[node name="waves5" type="ParallaxLayer" parent="front waves"]
position = Vector2(-776, 344)
motion_scale = Vector2(0.93, 0.93)
motion_mirroring = Vector2(1080, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(104.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.605868
speed_scale = 0.5

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(440.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(552.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(664.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(776.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(888.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(1000.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(1112.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(1224.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(1232.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(216.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.184302
speed_scale = 0.5

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="front waves/waves5"]
position = Vector2(328.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.10951
speed_scale = 0.5

[node name="waves6" type="ParallaxLayer" parent="front waves"]
position = Vector2(-712, 358)
motion_scale = Vector2(0.96, 0.96)
motion_mirroring = Vector2(1080, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(104.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.605868
speed_scale = 0.5

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(440.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(552.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(664.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(776.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(888.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(1000.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(1112.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(1224.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(1232.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(216.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.184302
speed_scale = 0.5

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="front waves/waves6"]
position = Vector2(328.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.10951
speed_scale = 0.5

[node name="waves7" type="ParallaxLayer" parent="front waves"]
position = Vector2(-768, 368)
motion_mirroring = Vector2(1080, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(104.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.605868
speed_scale = 0.5

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(440.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(552.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(664.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(776.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(888.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(1000.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(1112.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(1224.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(1232.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.209775
speed_scale = 0.5

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(216.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.184302
speed_scale = 0.5

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="front waves/waves7"]
position = Vector2(328.12, -48)
scale = Vector2(3.57, 3)
sprite_frames = SubResource("SpriteFrames_a2fva")
frame_progress = 0.10951
speed_scale = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("6_pe684")

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ocean2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
position = Vector2(0, -8)
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(1300, 0)

[node name="1" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ocean2"]
position = Vector2(416, 0)
scale = Vector2(2.2709, 2.84967)
texture = ExtResource("4_gkkfs")

[node name="moon" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
position = Vector2(-584, -152)
motion_mirroring = Vector2(0.01, 0)

[node name="moon2" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/moon"]
position = Vector2(808, 96)
scale = Vector2(3, 3)
texture = ExtResource("5_g4bcx")

[node name="clouds" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
position = Vector2(-992, -224)
motion_mirroring = Vector2(1800, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/clouds"]
position = Vector2(240, 72)
texture = ExtResource("5_1w37v")
flip_h = true

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/clouds"]
position = Vector2(856, 88)
texture = ExtResource("5_1w37v")

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/clouds"]
position = Vector2(648, -16)
texture = ExtResource("5_1w37v")

[node name="clouds2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
position = Vector2(-1032, -128)
motion_scale = Vector2(0.1, 1)
motion_offset = Vector2(0, 10)
motion_mirroring = Vector2(1728, 0)

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/clouds2"]
position = Vector2(816, 128)
scale = Vector2(3, 2.101)
texture = ExtResource("8_dwijc")

[node name="boat" type="CharacterBody2D" parent="."]
position = Vector2(-16, 192)
scale = Vector2(0.643837, 0.905501)
script = ExtResource("1_xkc0s")

[node name="boat_sprite" type="Sprite2D" parent="boat"]
texture = ExtResource("2_du806")

[node name="Camera2D" type="Camera2D" parent="boat"]
position = Vector2(12.4255, -220.872)

[node name="CollisionShape2D" type="CollisionShape2D" parent="boat"]
position = Vector2(-0.776595, 0.55218)
rotation = -3.14159
scale = Vector2(0.551564, -0.452392)
shape = SubResource("RectangleShape2D_raihm")

[node name="clock_hud" type="Control" parent="boat"]
layout_mode = 3
anchors_preset = 0
offset_left = -720.679
offset_top = -530.093
offset_right = -680.679
offset_bottom = -490.093
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("9_25523")

[node name="clock_label" type="Label" parent="boat/clock_hud"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -62.1276
offset_top = -61.8442
offset_right = 18.8724
offset_bottom = -13.8442
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("9_1v2s0")
theme_override_font_sizes/font_size = 72
text = "00:00"

[node name="time_timer" type="Timer" parent="boat/clock_hud"]
autostart = true

[node name="BottleNewWorld" parent="." instance=ExtResource("5_1ddor")]
top_level = true
z_index = 3
position = Vector2(401, 216)
scale = Vector2(4.36583, 5.49195)
